ingress/ingress-fengjian.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-kibana-80
  namespace: kube-system
spec:
  rules:
  - host: kibana.cinyi.com
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
